# tianfu-bank

./: .gitignore  BUILD.bazel  CLAUDE.md  WORKSPACE.bazel  deps.bzl  docker-compose.yaml  go.work  go.work.sum
docker/: account-service.dockerfile
services/account-service/: BUILD.bazel  go.mod  go.sum  main.go
services/account-service/adapter/primary/http/: BUILD.bazel  route.go  server.go
services/account-service/adapter/primary/http/account/: BUILD.bazel  dto.go  handler.go  handler_test.go
services/account-service/adapter/primary/mq/: BUILD.bazel
services/account-service/adapter/primary/mq/account/: BUILD.bazel  consumer.go  consumer_test.go
services/account-service/adapter/secondary/infrastructure/config/: BUILD.bazel  config.go
services/account-service/adapter/secondary/infrastructure/database/: BUILD.bazel  postgres.go
services/account-service/adapter/secondary/infrastructure/logger/: BUILD.bazel
services/account-service/adapter/secondary/messaging/rabbitmq/: BUILD.bazel  amqp_channel.go  publisher.go  publisher_test.go
services/account-service/adapter/secondary/repository/account/: BUILD.bazel  db.go  model.go
services/account-service/core/domain/account/: BUILD.bazel  entity.go  port.go  service.go  service_test.go
services/account-service/core/infrastructure/config/: BUILD.bazel  port.go
services/account-service/core/infrastructure/logger/: BUILD.bazel  port.go
services/account-service/db/migrations/: 000001_create_accounts.down.sql  000001_create_accounts_table.up.sql
services/transaction-service/: BUILD.bazel  go.mod  go.sum  main.go
services/transaction-service/adapter/primary/http/: BUILD.bazel  route.go  server.go
services/transaction-service/adapter/primary/http/transaction/: BUILD.bazel  dto.go  dto_test.go  handler.go  handler_test.go
services/transaction-service/adapter/primary/mq/account/: BUILD.bazel  amqp_channel.go  consumer.go  consumer_test.go
services/transaction-service/adapter/secondary/infrastructure/config/: BUILD.bazel  config.go
services/transaction-service/adapter/secondary/infrastructure/database/: BUILD.bazel  postgres.go  transaction.go
services/transaction-service/adapter/secondary/messaging/rabbitmq/: BUILD.bazel  publisher.go  publisher_test.go
services/transaction-service/adapter/secondary/repository/event_store/: BUILD.bazel  db.go  model.go
services/transaction-service/adapter/secondary/repository/idempotency/: BUILD.bazel  db.go  model.go
services/transaction-service/adapter/secondary/repository/snapshot/: BUILD.bazel  db.go  model.go
services/transaction-service/core/domain/transaction/: BUILD.bazel  aggregate.go  aggregate_test.go  entity.go  port.go  service.go  service_test.go
services/transaction-service/core/infrastructure/config/: BUILD.bazel  port.go
services/transaction-service/db/migrations/: 000001_create_transaction_tables.down.sql  000001_create_transaction_tables.up.sql
shared/: go.mod  go.sum
shared/apperror/: BUILD.bazel  apperror.go
shared/messaging/: BUILD.bazel  events.go  rabbitmq.go
