load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "account-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/kruangsuriya/tianfu-bank/services/account-service",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "account-service",
    embed = [":account-service_lib"],
    visibility = ["//visibility:public"],
)
