load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "transaction-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/zhunismp/tianfu-bank/services/transaction-service",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "transaction-service",
    embed = [":transaction-service_lib"],
    visibility = ["//visibility:public"],
)
