load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "messaging",
    srcs = [
        "events.go",
        "rabbitmq.go",
    ],
    importpath = "github.com/zhunismp/tianfu-bank/shared/messaging",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_github_shopspring_decimal//:decimal",
    ],
)
