load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "route.go",
        "server.go",
    ],
    importpath = "github.com/zhunismp/tianfu-bank/services/account-service/adapter/primary/http",
    visibility = ["//visibility:public"],
    deps = [
        "//services/account-service/adapter/primary/http/account",
        "//services/account-service/core/infrastructure/config",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_fiber_v2//middleware/cors",
        "@com_github_gofiber_fiber_v2//middleware/logger",
        "@com_github_gofiber_fiber_v2//middleware/recover",
    ],
)
