load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transaction",
    srcs = [
        "aggregate.go",
        "entity.go",
        "port.go",
        "service.go",
    ],
    importpath = "github.com/zhunismp/tianfu-bank/services/transaction-service/core/domain/transaction",
    visibility = ["//visibility:public"],
    deps = ["@com_github_shopspring_decimal//:decimal"],
)
