load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["postgres.go"],
    importpath = "github.com/zhunismp/tianfu-bank/services/account-service/adapter/secondary/infrastructure/database",
    visibility = ["//visibility:public"],
    deps = [
        "//services/account-service/core/infrastructure/config",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
