load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "account",
    srcs = [
        "db.go",
        "model.go",
    ],
    importpath = "github.com/zhunismp/tianfu-bank/services/account-service/adapter/secondary/repository/account",
    visibility = ["//visibility:public"],
    deps = [
        "//services/account-service/core/domain/account",
        "@com_github_shopspring_decimal//:decimal",
        "@io_gorm_gorm//:gorm",
    ],
)
