load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "account",
    srcs = ["consumer.go"],
    importpath = "github.com/zhunismp/tianfu-bank/services/transaction-service/adapter/primary/mq/account",
    visibility = ["//visibility:public"],
    deps = [
        "//services/transaction-service/core/domain/transaction",
        "//shared/messaging",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_github_shopspring_decimal//:decimal",
    ],
)
