load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/zhunismp/tianfu-bank/services/transaction-service/adapter/secondary/infrastructure/config",
    visibility = ["//visibility:public"],
    deps = ["//services/transaction-service/core/infrastructure/config"],
)
