load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "postgres.go",
        "transaction.go",
    ],
    importpath = "github.com/zhunismp/tianfu-bank/services/transaction-service/adapter/secondary/infrastructure/database",
    visibility = ["//visibility:public"],
    deps = [
        "//services/transaction-service/adapter/secondary/repository/event_store",
        "//services/transaction-service/adapter/secondary/repository/idempotency",
        "//services/transaction-service/adapter/secondary/repository/snapshot",
        "//services/transaction-service/core/domain/transaction",
        "//services/transaction-service/core/infrastructure/config",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
